# ChangeLog for sys-kernel/lh-sources
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*lh-sources-2.6.39-r2 (25 Jun 2011)

  25 Jun 2011; Justin Lecher <jlec@gentoo.org> +lh-sources-2.6.39-r2.ebuild:
  Version Bump

*lh-sources-2.6.39-r1 (09 Jun 2011)

  09 Jun 2011; Justin Lecher <jlec@gentoo.org> +lh-sources-2.6.39-r1.ebuild:
  Version Bump

*lh-sources-2.6.38-r6 (24 May 2011)

  24 May 2011; Justin Lecher <jlec@gentoo.org> +lh-sources-2.6.38-r6.ebuild:
  Version Bump

*lh-sources-2.6.39 (19 May 2011)

  19 May 2011; Justin Lecher <jlec@gentoo.org>
  +files/2.6.39-file-caching.patch, +lh-sources-2.6.39.ebuild:
  Veriosn BUmp

  11 May 2011; Justin Lecher <jlec@gentoo.org> +lh-sources-2.6.38-r5.ebuild:
  Version Bump

*lh-sources-2.6.38-r4 (03 May 2011)

  03 May 2011; Justin Lecher <jlec@gentoo.org> +lh-sources-2.6.38-r4.ebuild:
  Linux patch 2.6.38.5

*lh-sources-2.6.38-r3 (23 Apr 2011)

  23 Apr 2011; Justin Lecher <jlec@gentoo.org> +lh-sources-2.6.38-r3.ebuild:
  Version Bump

*lh-sources-2.6.38-r2 (17 Apr 2011)

  17 Apr 2011; Justin Lecher <jlec@gentoo.org> +lh-sources-2.6.38-r2.ebuild:
  Version Bump

  31 Mar 2011; Justin Lecher <jlec@gentoo.org> metadata.xml:
  Cleanup metadata.xml

*lh-sources-2.6.38-r1 (30 Mar 2011)

  30 Mar 2011; Justin Lecher <jlec@gentoo.org> lh-sources-2.6.37.ebuild,
  lh-sources-2.6.37-r1.ebuild, lh-sources-2.6.37-r2.ebuild,
  lh-sources-2.6.38.ebuild, +lh-sources-2.6.38-r1.ebuild:
  Version Bump

*lh-sources-2.6.38 (16 Mar 2011)

  16 Mar 2011; Justin Lecher <jlec@gentoo.org>
  +files/2.6.38-file-caching.patch, lh-sources-2.6.37-r2.ebuild,
  +lh-sources-2.6.38.ebuild:
  Version Bump

*lh-sources-2.6.37-r2 (11 Mar 2011)

  11 Mar 2011; Justin Lecher <jlec@gentoo.org> +lh-sources-2.6.37-r2.ebuild:
  Version Bump

*lh-sources-2.6.37-r1 (27 Feb 2011)

  27 Feb 2011; Justin Lecher <jlec@gentoo.org> +lh-sources-2.6.37-r1.ebuild:
  Version Bump

*lh-sources-2.6.37 (02 Feb 2011)
