@@ -2,6 +2,14 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  25 Jun 2011; Justin Lecher <jlec@gentoo.org> -lh-sources-2.6.35-r15.ebuild,
+  -lh-sources-2.6.37.ebuild, -lh-sources-2.6.37-r1.ebuild,
+  -lh-sources-2.6.37-r2.ebuild, -lh-sources-2.6.38.ebuild,
+  -lh-sources-2.6.38-r1.ebuild, -lh-sources-2.6.38-r2.ebuild,
+  -lh-sources-2.6.38-r3.ebuild, -lh-sources-2.6.38-r4.ebuild,
+  -lh-sources-2.6.38-r5.ebuild, -lh-sources-2.6.38-r6.ebuild:
+  Cleaned old
+
 *lh-sources-2.6.39-r2 (25 Jun 2011)
 
   25 Jun 2011; Justin Lecher <jlec@gentoo.org> +lh-sources-2.6.39-r2.ebuild:
